[package]
name = "rust-snmp-collector"
version = "0.3.7"
authors = ["Armin Fisslthaler <armin@fisslthaler.net>"]
edition = "2018"
license = "GPL-2.0"
readme = "README.md"
description = "Request information via SNMP and send it to a metrics database"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2.7", features = [ "cargo", "derive" ] }
config-file = { version = "0.2.1", features = [ "yaml" ] }
crossbeam-channel = "0.5.1"
env_logger = "0.10.1"
log = "0.4.14"
mib_parser = { git = "https://github.com/afics/mib-parser", rev = "0fd0832d6d7ad401dc480bc3120d185e1dc117c9" }
rand = "0.8.4"
scan_dir = "0.3.3"
serde = { version = "1.0.130", features = [ "derive" ] }
size_format = "1.0.2"
msnmp = { git = "https://github.com/afics/modern_snmp", rev = "84cbae0ef8d18354a4d9a5b8ca270c3536d02555" }
snmp_mp = { git = "https://github.com/afics/modern_snmp", rev = "84cbae0ef8d18354a4d9a5b8ca270c3536d02555" }
snmp_usm = { git = "https://github.com/afics/modern_snmp", rev = "84cbae0ef8d18354a4d9a5b8ca270c3536d02555" }

[package.metadata.deb]
extended-description = "Successor to pysnmpcollector. Gets information from hosts through SNMP and sends it to a Graphite/Carbon output"
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
    ["debian/environment", "etc/rust-snmp-collector/environment", "644"],
    ["example/simple-example.yaml", "etc/rust-snmp-collector/config/example.yaml-disabled", "644"],
    ["target/release/rust-snmp-collector", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/rust-snmp-collector/README", "644"],
    ["debian/rust-snmp-collector@.service", "lib/systemd/system/rust-snmp-collector@.service", "644"],
    ["debian/rust-snmp-collector.service", "lib/systemd/system/rust-snmp-collector.service", "644"]
]

conf-files = [
  "/etc/rust-snmp-collector/environment",
  "/etc/rust-snmp-collector/example.yaml-disabled",
]

